release page alignment issue fixed

--- a/src/app/shutter-fly/shared/components/data-grid/data-grid.component.scss
+++ b/src/app/shutter-fly/shared/components/data-grid/data-grid.component.scss
@@ -44,6 +44,11 @@
       box-sizing: border-box !important;
 
   }
+  .new_section{
+    position: absolute;
+    top:0px;
+    width: 100%;
+  }
   // .newRow > span.description{
   //   width:227px !important;
   // }
