--- a/src/app/shutter-fly/shared/components/release-grid/release-grid.component.scss
+++ b/src/app/shutter-fly/shared/components/release-grid/release-grid.component.scss
@@ -34,17 +34,20 @@
       }
     }
   /** cell styling **/
-  .newRow > span{
-      width:95px !important;
-      font-size: 14px !important;
-      box-sizing: border-box !important;
-    &:nth-child(1) {
-      width:50px !important;
-    }
+  .newRow{
+    width: 100%;
+    overflow: hidden;
   }
-  .newRow > span.description{
-    width:227px !important;
-  }
+/** cell styling **/
+.newRow > span{
+    // width:95px !important;
+    font-size: 14px !important;
+    box-sizing: border-box !important;
+    padding:.9rem 1.2rem;
+    box-sizing: content-box;
+
+}
+
   // .ngx-datatable.material .datatable-body .datatable-body-row .datatable-body-cell,
   // .ngx-datatable.material .datatable-header .datatable-header-cell{
   //   width:100px !important;
